--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,11 @@ name: depoly-container
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches:
+      - master
     paths:
       - 'packages/container/**'
-  pull_request:
-    branches: [ master ]
+  
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
