--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: depoly-container
+name: deploy-container
 
 # Controls when the workflow will run
 on:
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'packages/container/**'
   
   
 
