--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,12 @@ on:
   push:
     branches:
       - master
-   
-  
-  
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+    paths:
+      - 'packages/container/**'
+ 
+defaults:
+  run:
+    working-directory: packages/container
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
