--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,11 @@ jobs:
       # Runs a single command using the runners shell
       - run: npm install
       - run: npm run build
+      
+      - uses: chrislennnon/action-aws-cli@v1.1
+      - run:  aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest 
+        env:
+          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}  
 
       
